Added default for DISCORD_EMBED.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -10,6 +10,7 @@ ENV DEBUG_MODE 'false'
 ENV DISABLE_CHANGEPASSWORD 'false'
 ENV DISABLE_ONLINE_PLAYERS 'false'
 ENV DISABLE_TOP_PLAYERS 'false'
+ENV DISCORD_EMBED ''
 ENV CAPTCHA_KEY ''
 ENV CAPTCHA_LANGUAGE 'en'
 ENV CAPTCHA_SECRET ''
